# scurve3

./: .gitignore  README.md  pyproject.toml
scurve3/: binvis  colormap  cube  drawcurve  gray  swatch  testpattern
scurve3/scurve/: __init__.py  draw.py  graycurve.py  hcurve.py  hilbert.py  natural.py  progress.py  utils.py  zigzag.py  zorder.py
